force-app/main/default/objects/Membership__c/Membership__c.object-meta.xml
<CustomObject>
    <description>Created by: RG
Business Unit: For Hashtag 
Purpose: To track memberships for clients</description>
    <label>Membership</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Membership Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>