force-app/main/default/objects/Membership__c/fields/Conference_Room_Cost__c.field-meta.xml
<CustomField>
    <fullName>Conference_Room_Cost__c</fullName>
    <description>Created By: MV 
Business Unit: Hashtag Users 
Purpose: Total Amount of Conference room $ 
Populated: Automatic</description>
    <label>Conference Room Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>