force-app/main/default/objects/Membership__c/fields/COVID_19_Vaccination_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>COVID_19_Vaccination_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: TL
Business Unit: Cowork 
Purpose: For front desk cowork reps to confirm the vaccination status of members</description>
    <label>COVID-19 Vaccination Confirmed</label>
    <type>Checkbox</type>
</CustomField>