force-app/main/default/objects/Membership__c/fields/Daily_Free_Hours__c.field-meta.xml
<CustomField>
    <fullName>Daily_Free_Hours__c</fullName>
    <description>Created By: CC
Department: Cowork
Purpose: Roll up of the daily free hours.</description>
    <label>Daily Free Hours</label>
    <summarizedField>Member__c.Daily_Free_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Member__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Inactive</value>
    </summaryFilterItems>
    <summaryForeignKey>Member__c.Membership__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>