force-app/main/default/objects/Membership__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <description>Created By: MV 
Business Unit: Hashtag Users 
Purpose: Daily Grand Total for room reservations 
Populated: Automatic</description>
    <label>Total Charged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>