force-app/main/default/objects/Membership__c/fields/Grandfathered__c.field-meta.xml
<CustomField>
    <fullName>Grandfathered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MC
cowork 
to track grandfathered cowork memberships at &quot;$.01&quot;</description>
    <label>Grandfathered</label>
    <type>Checkbox</type>
</CustomField>