force-app/main/default/objects/Membership__c/fields/IsExpired__c.field-meta.xml
<CustomField>
    <fullName>IsExpired__c</fullName>
    <formula>TODAY() &gt;  Membership_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsExpired (do not display)</label>
    <type>Checkbox</type>
</CustomField>