force-app/main/default/objects/Membership__c/fields/Keycode__c.field-meta.xml
<CustomField>
    <fullName>Keycode__c</fullName>
    <description>CC Hashtag Keycode access number No Duplicates Allowed Manually</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Keycode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>