force-app/main/default/objects/Membership__c/fields/Membership_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_End_Date__c</fullName>
    <description>CC Hashtag Mark End Date of Memberships Automatic</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Membership End Date</label>
    <type>Date</type>
</CustomField>