force-app/main/default/objects/Membership__c/fields/Membership_Length__c.field-meta.xml
<CustomField>
    <fullName>Membership_Length__c</fullName>
    <description>Created By: MV 
Business Unit: Hashtag Users 
Purpose: To get the number of days as a member
Populated: automatic</description>
    <formula>CASE(Status__c, 
      &quot;Active&quot;, TODAY() - Membership_Start_Date__c, 
      &quot;Inactive&quot;,  Membership_End_Date__c -  Membership_Start_Date__c,
      0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>