force-app/main/default/objects/Membership__c/fields/Net_Number_of_Members__c.field-meta.xml
<CustomField>
    <fullName>Net_Number_of_Members__c</fullName>
    <description>CC Hashtag Used for Net Membership This Month Calculation Automatic</description>
    <formula>IF(ISPICKVAL(Type__c , &quot;Day Pass&quot;),0,
   CASE( Status__c , 
         &quot;Active&quot;,Number_of_Members__c, 
         &quot;Inactive&quot;,(Number_of_Members__c * -1),
         0
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Number of Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>