force-app/main/default/objects/Membership__c/fields/Number_of_Members__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Members__c</fullName>
    <defaultValue>1</defaultValue>
    <description>CC Hashtag Allow for a number of members to be entered Manual/Auto</description>
    <inlineHelpText>Defaults to one unless another value is entered.</inlineHelpText>
    <label>Number of Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>