force-app/main/default/objects/Membership__c/fields/Parking_Pass_Number__c.field-meta.xml
<CustomField>
    <fullName>Parking_Pass_Number__c</fullName>
    <description>CC Hashtag Parking Pass Number text so you can add commas to separate multiple passes Manually.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Parking Pass Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>