force-app/main/default/objects/Membership__c/fields/Podcast_Room_Cost__c.field-meta.xml
<CustomField>
    <fullName>Podcast_Room_Cost__c</fullName>
    <description>Created By: MV 
Business Unit: Hashtag Users 
Purpose: Total amount for podcast room $ 
Populated: Automatic</description>
    <label>Podcast Room Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>