force-app/main/default/objects/Membership__c/fields/Signed_Parking_Contract__c.field-meta.xml
<CustomField>
    <fullName>Signed_Parking_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CC Hashtag Signed Parking Contract Manually</description>
    <label>Signed Parking Contract</label>
    <type>Checkbox</type>
</CustomField>