force-app/main/default/objects/Membership__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>CC Hashtag Membership Status Visualforce</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Active_Inactive</valueSetName>
    </valueSet>
</CustomField>