force-app/main/default/objects/Membership__c/fields/Stripe_Charge_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Charge_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stripe Charge ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>