force-app/main/default/objects/Membership__c/fields/Stripe_Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stripe Subscription Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>