force-app/main/default/objects/Membership__c/fields/Stripe_Subscription_Required__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription_Required__c</fullName>
    <formula>OR(
TEXT(Type__c) = &apos;Student&apos;,
TEXT(Type__c) = &apos;Individual&apos;,
TEXT(Type__c) = &apos;Group&apos;,
TEXT(Type__c) = &apos;Virtual Tenant&apos;,
TEXT(Type__c) = &apos;Individual Yearly&apos;,
TEXT(Type__c) = &apos;Student Yearly&apos;,
TEXT(Type__c) = &apos;Virtual Tenant + Group&apos;
)</formula>
    <label>Stripe Subscription Required</label>
    <type>Checkbox</type>
</CustomField>