force-app/main/default/objects/Membership__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <formula>HYPERLINK(&quot;https://dashboard.stripe.com/subscriptions/&quot;&amp;  Stripe_Subscription_Id__c  , 

Stripe_Subscription_Id__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription</label>
    <type>Text</type>
</CustomField>