force-app/main/default/objects/Membership__c/fields/Today__c.field-meta.xml
<CustomField>
    <fullName>Today__c</fullName>
    <description>Created By: MV 
Business Unit:  Hashtag Users 
Purpose: To set off process builder Day pass status
Populated: automatic</description>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today (do not display)</label>
    <type>Date</type>
</CustomField>