force-app/main/default/objects/Membership__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Day Pass</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Virtual Tenant</fullName>
            </value>
            <value>
                <fullName>Hashtag + Lift</fullName>
            </value>
            <value>
                <fullName>Individual Yearly</fullName>
            </value>
            <value>
                <fullName>Student Yearly</fullName>
            </value>
            <value>
                <fullName>Virtual Tenant + Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>