force-app/main/default/objects/Membership__c/fields/Waiting_for_Covid_Restrictions_to_End__c.field-meta.xml
<CustomField>
    <fullName>Waiting_for_Covid_Restrictions_to_End__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HS
Cowork 
To track members who are waiting for Covid restrictions to end before utilizing their membership</description>
    <label>Waiting for Covid Restrictions to End</label>
    <type>Checkbox</type>
</CustomField>