force-app/main/default/objects/Membership__c/recordTypes/Cowork_Membership.recordType-meta.xml
<RecordType>
    <fullName>Cowork_Membership</fullName>
    <active>true</active>
    <label>Cowork Membership</label>
</RecordType>