force-app/main/default/objects/Membership__c/validationRules/Contact_must_have_email.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_have_email</fullName>
    <active>true</active>
    <description>Created by JW
Prevents a membership from being created if the contact has no email address.</description>
    <errorConditionFormula>Contact__r.Email = &apos;&apos;</errorConditionFormula>
    <errorMessage>The contact for a membership must have a valid email address.</errorMessage>
</ValidationRule>