force-app/main/default/objects/Membership__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Membership_Start_Date__c</columns>
    <columns>Number_of_Members__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>