force-app/main/default/objects/Membership__c/listViews/All_Bakersfield_Membership.listView-meta.xml
<ListView>
    <fullName>All_Bakersfield_Membership</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Type__c</columns>
    <columns>Membership_Start_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Revenue_mo__c</columns>
    <columns>COVID_19_Vaccination_Confirmed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Market__c</field>
        <operation>equals</operation>
        <value>Bakersfield</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Cowork Active Bakersfield Memberships</label>
    <sharedTo>
        <group>Cowork_Team</group>
        <group>SF_Admin_Team</group>
    </sharedTo>
</ListView>