force-app/main/default/objects/Membership__c/listViews/All_Merced_Membership.listView-meta.xml
<ListView>
    <fullName>All_Merced_Membership</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Market__c</field>
        <operation>equals</operation>
        <value>Merced</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Cowork Active Merced Memberships</label>
    <sharedTo>
        <group>Cowork_Team</group>
        <group>SF_Admin_Team</group>
    </sharedTo>
</ListView>