force-app/main/default/objects/Membership__c/listViews/Cowork_Former_Day_Pass_Members.listView-meta.xml
<ListView>
    <fullName>Cowork_Former_Day_Pass_Members</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Day Pass</value>
    </filters>
    <label>Cowork Former Day Pass Members</label>
    <sharedTo>
        <group>Cowork_Team</group>
    </sharedTo>
</ListView>