force-app/main/default/objects/Membership__c/listViews/Cowork_Group_Memberships.listView-meta.xml
<ListView>
    <fullName>Cowork_Group_Memberships</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Contact__c</columns>
    <columns>Number_of_Members__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Group</value>
    </filters>
    <label>Cowork Group Memberships</label>
    <sharedTo>
        <group>Cowork_Team</group>
    </sharedTo>
</ListView>