force-app/main/default/objects/Membership__c/listViews/Cowork_Inactive_Memberships.listView-meta.xml
<ListView>
    <fullName>Cowork_Inactive_Memberships</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Membership_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Day Pass,Student,Individual,Group,Virtual Tenant</value>
    </filters>
    <label>Cowork Inactive Memberships</label>
    <sharedTo>
        <group>Cowork_Team</group>
    </sharedTo>
</ListView>