force-app/main/default/objects/Membership__c/listViews/Cowork_Member_Stripe_Information.listView-meta.xml
<ListView>
    <fullName>Cowork_Member_Stripe_Information</fullName>
    <columns>NAME</columns>
    <columns>Stripe_Charge_ID__c</columns>
    <columns>Stripe_Subscription_Id__c</columns>
    <columns>Subscription__c</columns>
    <filterScope>Everything</filterScope>
    <label>Cowork Member Stripe Information</label>
    <sharedTo>
        <group>Cowork_Team</group>
    </sharedTo>
</ListView>