force-app/main/default/objects/Membership__c/listViews/Cowork_Waiting_on_Restrictions.listView-meta.xml
<ListView>
    <fullName>Cowork_Waiting_on_Restrictions</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Membership_Start_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Revenue_mo__c</columns>
    <columns>COVID_19_Vaccination_Confirmed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Waiting_for_Covid_Restrictions_to_End__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Cowork Waiting on Restrictions</label>
    <sharedTo>
        <group>Cowork_Team</group>
        <group>SF_Admin_Team</group>
    </sharedTo>
</ListView>